tests/org.eclipse.php.core.tests/workspace/errors/illegalVar.pdtt
--TEST--
Test illegal argument error reporting
--FILE--
<?php
$4545;
?>
--EXPECT--
[line=2, start=7, end=11] syntax error, unexpected '4545', expecting 'variable' or '$'